samples/_failures_safe/1761084894_8d3344_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6867f1e5.c: In function ‘main’:
./samples/SAFE/__tmp_6867f1e5.c:169:9: error: expected expression at end of input
  169 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_6867f1e5.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6867f1e5.c:169:9: error: expected declaration or statement at end of input
